# NowUI

./: CLAUDE.md  Cargo.toml  README.md
examples/: components_demo.nowui  counter.nowui  demo.nowui  login.nowui
examples/counter-app/: Cargo.toml  counter.nowui
examples/counter-app/src/: demo.nowui  login.nowui  main.rs
examples/widgets/: BillingCard.nowui  StatCard.nowui
nowui-core/: Cargo.toml  LICENSE
nowui-core/src/: arena.rs  datetime.rs  geometry.rs  layout.rs  lib.rs  paint.rs  painter.rs  state.rs  style.rs  tailwind.rs  text_input.rs
nowui-extension/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
nowui-extension/scripts/: stage-lsp.js
nowui-extension/src/: extension.ts
nowui-lsp/: Cargo.toml
nowui-lsp/src/: line_index.rs  main.rs  tokenizer.rs
nowui-macros/: Cargo.toml
nowui-macros/src/: lib.rs
nowui-render/: Cargo.toml
nowui-render-gpu/: Cargo.toml
nowui-render-gpu/src/: lib.rs
nowui-render-gpu/tests/: offscreen.rs
nowui-render/src/: lib.rs
nowui-runtime/: Cargo.toml
nowui-runtime/examples/: counter.nowui  counter.rs  datetime_demo.nowui  datetime_demo.rs
nowui-runtime/src/: app.rs  dynamic.rs  lib.rs  loader.rs  main.rs  semantic.rs  test_view_fixture.nowui  transitions.rs
nowui-runtime/src/view_fixtures/: main.nowui
nowui-runtime/src/view_fixtures/widgets/: Badge.nowui
nowui-runtime/tests/: bundled_view.rs  reactivity.rs  state_value_types.rs
nowui-syntax/: Cargo.toml
nowui-syntax/src/: ast.rs  import_path.rs  lib.rs  parser.rs
nowui-text/: Cargo.toml
nowui-text/src/: lib.rs
