[workspace]
resolver = "2"
members = [
    "nowui-syntax",
    "nowui-core",
    "nowui-macros",
    "nowui-text",
    "nowui-render",
    "nowui-render-gpu",
    "nowui-runtime",
    "nowui-lsp",
    "examples/counter-app",
]

# Shared dependency versions. Pinned loosely; run `cargo update` to refresh.
# NOTE: winit's API shifts between minor versions — if `nowui-runtime` fails to
# build, check the winit docs.rs page for the version cargo resolved and adjust
# the ApplicationHandler method signatures in nowui-runtime/src/app.rs.
[workspace.dependencies]
chumsky = "0.9"
tiny-skia = "0.11"
winit = "0.30"
softbuffer = "0.4"
cosmic-text = "0.12"
# `vello` re-exports `wgpu`/`peniko`/`kurbo` as `vello::wgpu`/`vello::peniko`/
# `vello::kurbo` — use those re-exports everywhere instead of adding separate
# `wgpu`/`peniko`/`kurbo` workspace deps, so the versions can never drift out
# of sync with what `vello` itself was built against.
vello = "0.9"
pollster = "0.3"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
tower-lsp = "0.20"
tokio = "1"
