[package]
name = "nowui-render-gpu"
version = "0.1.0"
edition = "2021"
description = "vello/wgpu GPU Painter implementation for the NowUI UI toolkit."
license = "MIT"
repository = "https://github.com/DeanVanGreunen/NowUI"

[dependencies]
nowui-core = { path = "../nowui-core", version = "0.1.0" }
nowui-text = { path = "../nowui-text", version = "0.1.0" }
cosmic-text = { workspace = true }
vello = { workspace = true }
pollster = { workspace = true }

[dev-dependencies]
nowui-render = { path = "../nowui-render", version = "0.1.0" }
tiny-skia = { workspace = true }
