[package]
name = "nowui-text"
version = "0.1.0"
edition = "2021"
description = "Shared cosmic-text shaping/measurement for every NowUI Painter backend."
license = "MIT"
repository = "https://github.com/DeanVanGreunen/NowUI"

[dependencies]
nowui-core = { path = "../nowui-core", version = "0.1.0" }
cosmic-text = { workspace = true }
